# DataSync

./: .gitignore  ANALISIS_COMPLETO_PROYECTO.md  ANALISIS_PROBLEMAS_ENGINES.md  ANALISIS_PROBLEMAS_SYNC.md  ANALISIS_PROBLEMAS_UTILS.md  API_DOCUMENTATION.md  CATALOG_CODE_REVIEW.md  CDC_ARCHITECTURE_PLAN.md  CMakeLists.txt  COLUMN_CATALOG_DESIGN.md  COMMERCIALIZATION_ROADMAP.md  COMMERCIAL_READINESS_ASSESSMENT.md  CONECTORES_IMPLEMENTADOS.md  CONSOLIDATION_FINAL_REPORT.md  CONSOLIDATION_SUMMARY.md  CORRECCIONES_APLICADAS.md  CORRECCIONES_PENDIENTES_APLICADAS.md  DataSync-main.rar  DataSync_Architecture_Diagram.drawio  FIXES_SUMMARY.md  GOVERNANCE_CODE_REVIEW.md  GOVERNANCE_FINAL_COMPLETION.md  INSTALL_DEPENDENCIES.md  INSTALL_DYNAMODB_SDK.md  LICENSE  MAINTENANCE_OPERATIONS.md  MAINTENANCE_SYSTEM_DESIGN.md  MARKETING_GUIDE.md  METRICS_COLLECTOR_ANALYSIS.md  MONGODB_SYNC_DESIGN.md  PARALLEL_FINAL_REPORT.md  PARALLEL_OPTIMIZATION_ANALYSIS.md  PARALLEL_OPTIMIZATION_COMPLETE.md  README.md  REFACTORIZACIONES_COMPLETADAS.md  REFACTORIZACION_SOLID_ACOPLAMIENTO.md  SECURITY_AND_BUGS_REPORT.md  SYNC_CONSOLIDATION_ANALYSIS.md  SYNC_NEXT_STEPS.md  TESTING_BIG_DATA.md  (+41 more)
.cursor/rules/: kissmethod.mdc
Compiler-feature-15dd514/: CMakeLists.txt  TODO.txt
Compiler-feature-15dd514/DDL/: Catalog.sql  Config Table.sql  Data Quality.sql  DataGovernance.sql  Insert ConnStrings.sql  SETUP.sql  TransferMetrics.sql  UPDATE DATA QUALITY.SQL  sadasd.sql
Compiler-feature-15dd514/frontend/: package-lock.json  package.json  server.js
Compiler-feature-15dd514/include/: Config.h  ConnectionPool.h  DDLExporter.h  DataGovernance.h  DataQuality.h  MSSQLToPostgres.h  MariaDBToPostgres.h  MetricsCollector.h  MongoToPostgres.h  PostgresToPostgres.h  StreamingData.h  SyncReporter.h  catalog_manager.h  logger.h
Compiler-feature-15dd514/src/: Config.cpp  DataGovernance.cpp  DataQuality.cpp  MetricsCollector.cpp  SyncReporter.cpp  logger.cpp  main.cpp
Compiler-test-branch/: TODO.txt  build.sh  config.json
Compiler-test-branch/DDL/: Monitoring System.sql  SETUP.sql  create users mssql.sql
Compiler-test-branch/frontend/: server.js
Compiler-test-branch/include/: Config.h  DataGovernance.h  MSSQLToPostgres.h  MariaDBToPostgres.h  PostgresToPostgres.h  StreamingData.h  catalog_manager.h
Compiler-test-branch/src/: Config.cpp  MetricsCollector.cpp  logger.cpp  main.cpp
DDL/: Insert ConnStrings.sql  SETUP.sql  add_size_column.sql  catalog_locks.sql  metadata_extracted.sql  metadata_schema_complete.sql
STABLE BACKUP/: CMakeLists.txt  TODO.txt
STABLE BACKUP/DDL/: update_metrics_table.sql
STABLE BACKUP/frontend/: server.js
STABLE BACKUP/frontend/src/: App.tsx
STABLE BACKUP/frontend/src/components/: Dashboard.tsx  EditModal.tsx  Governance.tsx  Monitor.tsx
STABLE BACKUP/include/: DDLExporter.h
STABLE BACKUP/src/: DataGovernance.cpp  logger.cpp
frontend/: FRONTEND_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  PENDING_ISSUES.md  README_TESTS.md  REFACTORING_SUMMARY.md  jest.config.js  package-lock.json  package.json  server.js
frontend/__tests__/: api-catalog.test.js  auth.test.js  catalog.test.js  custom-jobs.test.js  setup.test.js  validation.test.js
frontend/scripts/: create-user.js
frontend/server-utils/: auth.js
frontend/src/: App.tsx  index.css
include/: Config.h  ConfigManager.h  ConnectionPool.h  ConnectionStringParser.h  DDLExporter.h  DDLExporterInterface.h  DDLFileManager.h  DataClassifier.h  DataGovernance.h  DataQuality.h  DataQualityCalculator.h  DatabaseConnectionManager.h  DatabaseResourceWrappers.h  LogConfigManager.h  LogFileManager.h  LogFormatter.h  MSSQLConnectionManager.h  MSSQLDDLExporter.h  MSSQLDataTransfer.h  MSSQLDataValidator.h  MSSQLQueryExecutor.h  MSSQLTableSetup.h  MSSQLToPostgres.h  MaintenanceService.h  MariaDBConnectionManager.h  MariaDBDDLExporter.h  MariaDBDataTransfer.h  MariaDBDataValidator.h  MariaDBQueryExecutor.h  MariaDBToPostgres.h  MetricsCalculator.h  MetricsCollector.h  MetricsDatabaseManager.h  MetricsReporter.h  MongoToPostgres.h  MonitoringService.h  ParallelProcessing.h  PostgreSQLDDLExporter.h  PostgresToPostgres.h  StreamingData.h  (+8 more)
include/backup/: backup_manager.h  (+1 more)
landing/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
migrations/: remove_last_processed_pk_and_has_pk.sql  remove_last_sync_time_add_mongo_last_sync_time.sql  update_pk_strategy_default_and_comment.sql
new/: TODO.txt
rules/: governance_rules.json
schema_migrations/: 005_create_unified_query_performance_table.sql  006_enable_pg_stat_statements.sql  007_add_maintenance_metrics_columns.sql  008_unify_maintenance_tables.sql  009_fix_maintenance_control_unique_constraint.sql  010_create_column_catalog_table.sql  README_pg_stat_statements.md
scripts/: README.md  TEST_INSTRUCTIONS.md  api_data_fetcher.py  calculate_metrics.py  example_data_generator.py  governance_migrations.sql  run_governance_migrations.sh  run_system_logs_migration.sh  system_logs_migration.sql  test_simple.py
src/: Config.cpp  ConfigManager.cpp  ConnectionPool.cpp  DDLExporter.cpp  DDLExporterInterface.cpp  DDLExporter_new.cpp  DDLFileManager.cpp  DataClassifier.cpp  DataGovernance.cpp  DataQuality.cpp  DataQualityCalculator.cpp  DatabaseConnectionManager.cpp  LogConfigManager.cpp  LogFileManager.cpp  LogFormatter.cpp  MSSQLConnectionManager.cpp  MSSQLDDLExporter.cpp  MSSQLDataTransfer.cpp  MSSQLDataValidator.cpp  MSSQLQueryExecutor.cpp  MSSQLTableSetup.cpp  MSSQLToPostgres.cpp  MaintenanceService.cpp  MariaDBConnectionManager.cpp  MariaDBDDLExporter.cpp  MariaDBDataTransfer.cpp  MariaDBDataValidator.cpp  MariaDBQueryExecutor.cpp  MariaDBToPostgres.cpp  MetricsCalculator.cpp  MetricsCollector.cpp  MetricsDatabaseManager.cpp  MetricsReporter.cpp  MonitoringService.cpp  PostgreSQLDDLExporter.cpp  StreamingData.cpp  SyncReporter.cpp  ThreadManager.cpp  TransferMetricsData.cpp  TransferOrchestrator.cpp  (+3 more)
test/: test_api_catalog_repository.cpp  test_catalog_cleaner.cpp  test_catalog_lock.cpp  test_catalog_manager.cpp  test_custom_jobs_repository.cpp  test_metadata_repository.cpp
(+518 files in other folders)
